--- a/src/index.html
+++ b/src/index.html
@@ -20,24 +20,24 @@
               <span class="header-top-nav__gamburger navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <ul class="row header-top-nav__ul navbar-nav mx-auto">
-                <li class="nav-item header-top-nav__li col-md-auto text-center">
-                  <a class="header-top-nav__a nav-link" aria-current="page" href="#">Главная</a>
+              <ul class="row primary-nav navbar-nav mx-auto">
+                <li class="nav-item primary-nav__li col-md-auto text-center">
+                  <a class="primary-nav__a nav-link" aria-current="page" href="#">Главная</a>
                 </li>
-                <li class="nav-item header-top-nav__li col-md-auto text-center">
-                  <a class="header-top-nav__a nav-link" href="#">Со своим автомобилем</a>
+                <li class="nav-item primary-nav__li col-md-auto text-center">
+                  <a class="primary-nav__a nav-link" href="#">Со своим автомобилем</a>
                 </li>
-                <li class="nav-item header-top-nav__li col-md-auto text-center">
-                  <a class="header-top-nav__a nav-link" href="#">На автомобиле компании</a>
+                <li class="nav-item primary-nav__li col-md-auto text-center">
+                  <a class="primary-nav__a nav-link" href="#">На автомобиле компании</a>
                 </li>
-                <li class="nav-item header-top-nav__li col-md-auto text-center">
-                  <a class="header-top-nav__a nav-link" href="#">Требования</a>
+                <li class="nav-item primary-nav__li col-md-auto text-center">
+                  <a class="primary-nav__a nav-link" href="#">Требования</a>
                 </li>
-                <li class="nav-item header-top-nav__li col-md-auto text-center">
-                  <a class="header-top-nav__a nav-link" href="#">Контакты</a>
+                <li class="nav-item primary-nav__li col-md-auto text-center">
+                  <a class="primary-nav__a nav-link" href="#">Контакты</a>
                 </li>
-                <li class="nav-item header-top-nav__li col-md-auto text-center">
-                  <a class="header-top-nav__a nav-link" href="#">Оставить заявку</a>
+                <li class="nav-item primary-nav__li col-md-auto text-center">
+                  <a class="primary-nav__a nav-link" href="#">Оставить заявку</a>
                 </li>
               </ul>
             </div>
@@ -49,18 +49,18 @@
       <div class="container">
         <div class="row">
           <div class="header-middle__contacts col-4 offset-7">
-            <div class="row flex-column flex-md-row">
-              <div class="col d-flex align-items-center">
+            <div class="row flex-column flex-md-row align-items-center">
+              <div class="col">
                 <div class="header-middle__contacts-group">
                   <div class="header-middle__contacts-text-off d-none d-md-block">
-                    <p class="header-middle__contacts-text text-md-center d-none d-md-block">Звоните нам ежедневно</p>
+                    <p class="header-middle__contacts-text text-md-center">Звоните нам ежедневно</p>
                   </div>
                   <div>
                     <p class="header-middle__contacts-tel text-md-center mb-0">+38099- 000-000-00</p>
                   </div>
                 </div>
               </div>
-              <div class="col d-flex align-items-center">
+              <div class="col">
                 <button type="button" class="btn-gradient header-middle__btn">
                   Заказать звонок
                 </button>
@@ -253,8 +253,8 @@
               мобильный телефон</p>
           </div>
         </div>
-        <div class="row main-second row-cols-1 row-cols-md-3">
-            <div class="col mb-4 mr-4">
+        <div class="row main-second row-cols-1 row-cols-md-3 g-3">
+            <div class="col">
               <div class="card text-bg-dark main-second__item-card">
                 <img src="./img/Карточка 1.png" class="card-img" alt="...">
                 <div class="card-img-overlay d-flex flex-column align-items-center justify-content-around">
@@ -265,7 +265,7 @@
                 </div>
               </div>
             </div>
-            <div class="col mb-4 mr-4">
+            <div class="col">
               <div class="card text-bg-dark main-second__item-card">
                 <img src="./img/Карточка 2.png" class="card-img" alt="...">
                 <div class="card-img-overlay d-flex flex-column align-items-center justify-content-around">
@@ -276,7 +276,7 @@
                 </div>
               </div>
             </div>
-            <div class="col mb-4 mr-4">
+            <div class="col">
               <div class="card text-bg-dark main-second__item-card">
                 <img src="./img/Карточка 3.png" class="card-img" alt="...">
                 <div class="card-img-overlay d-flex flex-column align-items-center justify-content-around">
@@ -287,7 +287,7 @@
                 </div>
               </div>
             </div>
-            <div class="col mb-4 mr-4">
+            <div class="col">
               <div class="card text-bg-dark main-second__item-card">
                 <img src="./img/Карточка 4.png" class="card-img" alt="...">
                 <div class="card-img-overlay d-flex flex-column align-items-center justify-content-around">
@@ -298,7 +298,7 @@
                 </div>
               </div>
             </div>
-            <div class="col mb-4 mr-4">
+            <div class="col">
               <div class="card text-bg-dark main-second__item-card">
                 <img src="./img/Карточка 5.png" class="card-img" alt="...">
                 <div class="card-img-overlay d-flex flex-column align-items-center justify-content-around">
@@ -309,7 +309,7 @@
                 </div>
               </div>
             </div>
-            <div class="col mb-4">
+            <div class="col">
               <div class="card text-bg-dark main-second__item-card">
                 <img src="./img/Карточка 6.png" class="card-img" alt="...">
                 <div class="card-img-overlay d-flex flex-column align-items-center justify-content-around">
@@ -434,33 +434,33 @@
   <footer class="footer-section position-relative">
     <div class="container">
       <div class="row footer-section__teil">
-        <div class="col-12 col-md-5 offset-md-4">
+        <div class="col-12 col-md-8 col-lg-6 offset-md-2 offset-lg-3">
           <ul class="row navigation-list list-unstyled mb-2 mt-5 justify-content-center justify-content-md-around">
-            <li class="col-auto">
-              <a href="#" class="col navigation-list__link-nav text-decoration-none">на главную</a>
+            <li class="col-auto navigation-list__link-nav">
+              <a href="#" class="text-decoration-none">на главную</a>
             </li>
-            <li class="col-auto">
-              <a href="#" class="col navigation-list__link-nav text-decoration-none">города</a>
+            <li class="col-auto navigation-list__link-nav">
+              <a href="#" class="text-decoration-none">города</a>
             </li>
-            <li class="col-auto">
-              <a href="#" class="col navigation-list__link-nav text-decoration-none">для водителей</a>
+            <li class="col-auto navigation-list__link-nav">
+              <a href="#" class="text-decoration-none">для водителей</a>
             </li>
           </ul>
           <ul class="row info-list list-unstyled mb-2 justify-content-center justify-content-md-between">
-            <li class="col-auto">
-              <a href="#" class="col info-list__link-info text-decoration-none">центр поддержки</a>
+            <li class="col-auto info-list__link-info">
+              <a href="#" class="text-decoration-none">центр поддержки</a>
             </li>
-            <li class="col-auto">
-              <a href="#" class="col info-list__link-info text-decoration-none">вакансии</a>
+            <li class="col-auto info-list__link-info">
+              <a href="#" class="text-decoration-none">вакансии</a>
             </li>
-            <li class="col-auto">
-              <a href="#" class="col info-list__link-info text-decoration-none">разработчики</a>
+            <li class="col-auto info-list__link-info">
+              <a href="#" class="text-decoration-none">разработчики</a>
             </li>
-            <li class="col-auto">
-              <a href="#" class="col info-list__link-info text-decoration-none">блог</a>
+            <li class="col-auto info-list__link-info">
+              <a href="#" class="text-decoration-none">блог</a>
             </li>
-            <li class="col-auto">
-              <a href="#" class="col info-list__link-info text-decoration-none">о нас</a>
+            <li class="col-auto info-list__link-info">
+              <a href="#" class="text-decoration-none">о нас</a>
             </li>
           </ul>
           <div class="row justify-content-center mb-4">
