--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,8 @@
                 Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете. Бонуcная
                 система.Помимо
                 выполненной работы по заказам, компания начисляет бонусы за пиковое время.
-                <br><br>
+              </p>
+              <p class="text-center header-bottom__paragraph">
                 Мы одни из партнеров и зарекомендовали себя
                 как одна из лучших команд в городе Киев. Водители у нас зарабатывают от 30 000 - 120000 в месяц.
               </p>
@@ -253,8 +254,8 @@
               мобильный телефон</p>
           </div>
         </div>
-        <div class="row main-second row-cols-1 row-cols-md-3 g-3">
-            <div class="col">
+        <div class="row main-second row-cols-1 row-cols-sm-2 row-cols-md-3">
+            <div class="col-3 mb-3">
               <div class="card text-bg-dark main-second__item-card">
                 <img src="./img/Карточка 1.png" class="card-img" alt="...">
                 <div class="card-img-overlay d-flex flex-column align-items-center justify-content-around">
@@ -265,7 +266,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-3 mb-3">
               <div class="card text-bg-dark main-second__item-card">
                 <img src="./img/Карточка 2.png" class="card-img" alt="...">
                 <div class="card-img-overlay d-flex flex-column align-items-center justify-content-around">
@@ -276,7 +277,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-3 mb-3">
               <div class="card text-bg-dark main-second__item-card">
                 <img src="./img/Карточка 3.png" class="card-img" alt="...">
                 <div class="card-img-overlay d-flex flex-column align-items-center justify-content-around">
@@ -287,7 +288,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-3 mb-3">
               <div class="card text-bg-dark main-second__item-card">
                 <img src="./img/Карточка 4.png" class="card-img" alt="...">
                 <div class="card-img-overlay d-flex flex-column align-items-center justify-content-around">
@@ -298,7 +299,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-3 mb-3">
               <div class="card text-bg-dark main-second__item-card">
                 <img src="./img/Карточка 5.png" class="card-img" alt="...">
                 <div class="card-img-overlay d-flex flex-column align-items-center justify-content-around">
@@ -309,7 +310,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-3 mb-3">
               <div class="card text-bg-dark main-second__item-card">
                 <img src="./img/Карточка 6.png" class="card-img" alt="...">
                 <div class="card-img-overlay d-flex flex-column align-items-center justify-content-around">
